# QT-MT5-2.5

./: .cursorrules  .gitignore  AGENTS.md  OfficialFuturesHedgebotv2.5QT.sln  OfficialFuturesHedgebotv2.sln  README.md  deploy-multistrat.sh  logs.txt  run-bridge.sh  tmp.elastic.scan.txt  tmp.id1.txt  verify_dll.cs
.augment/rules/imported/: copilot-instructions.md
.claude-flow/metrics/: performance.json  system-metrics.json  task-metrics.json
.cursor/rules/: self_improve.mdc
.cursor/rules/taskmaster/: taskmaster.mdc
.github/: copilot-instructions.md
BridgeApp/: Makefile  app.go  app_close_request_test.go  app_elastic_extract_test.go  app_pending_close_test.go  config.md  go.mod  grpc_server_test.go  main.go  main_headless.go  wails.json
BridgeApp/.claude-flow/metrics/: performance.json  task-metrics.json
BridgeApp/frontend/: index.html  package-lock.json
BridgeApp/frontend/src/: App.css  App.jsx
BridgeApp/frontend/wailsjs/go/: models.ts
BridgeApp/frontend/wailsjs/go/main/: App.d.ts  App.js
BridgeApp/internal/grpc/: conversions.go  server.go
BridgeApp/internal/logging/: logger.go  sentry_integration.go  stdlog_adapter.go
BridgeApp/logs/: unified-20250918.jsonl  unified-20250919.jsonl  unified-20250926.jsonl  unified-20250927.jsonl  unified-20250928.jsonl  unified-20250929.jsonl  unified-20250930.jsonl  unified-20251001.jsonl
BridgeApp/proto/: trading.proto
BridgeApp/tools/analyze/: main.go
BridgeApp/tools/genicon/: main.go
BridgeApp/tools/send_synthetic_log/: main.go
BridgeApp/tools/smoke/: main.go
MT5/: ACHedgeMaster_HTTP_BACKUP.mq5  ACHedgeMaster_gRPC.mq5  GrpcWrapper.cpp  MT5GrpcClient.cs  MT5GrpcClient.csproj  MT5GrpcClientSimple.cs  MT5GrpcClientSimple.csproj  MT5GrpcWrapper.cpp  MT5GrpcWrapper.def  MT5Logger.cs  Makefile  SimpleWrapper.cpp  build-all.ps1  build.ps1  build_grpc_wrapper.bat  build_wrapper.bat  deploy-mt5-grpc.ps1  gRPC_Conversion_Progress.md
MT5/Include/: ACFunctions_gRPC.mqh  ATRtrailing.mqh  ATRtrailing_gRPC.mqh  StatusIndicator.mqh  StatusIndicator_gRPC.mqh  StatusOverlay_gRPC.mqh
MT5/Include/gRPC/: UnifiedLogging.mqh
MT5/MT5GrpcClient/: CMakeLists.txt  README.md  build.bat  vcpkg.json
MT5/MT5GrpcClient/include/: grpc_client_impl.h  json_converter.h  mt5_grpc_client.h
MT5/MT5GrpcClient/proto/: trading.proto
MT5/MT5GrpcClient/src/: grpc_client_impl.cpp  json_converter.cpp  mt5_grpc_client.cpp
MT5/cpp-grpc-client/: CMakeLists.txt  Experts  JsonConverter.cpp  JsonConverter.h  MT5GrpcClient.cpp  MT5GrpcClient.h  README.md  build_cpp_grpc.bat  vcpkg.json  vcpkg_install.bat
MT5/cpp-grpc-client/proto/: trading.proto
MT5/proto/: trading.proto
MultiStratManagerRepo/: IndicatorCalculator.cs  MultiStratManager.cs  MultiStratManager.csproj  SLTPRemovalLogic.cs  SQLiteHelper.cs  SimpleJson.cs  TrailingAndElasticManager.cs  UIForManager.cs  app.config  deployment-sync.sh  gRPC_Integration_Summary.md
MultiStratManagerRepo/.claude-flow/metrics/: performance.json  system-metrics.json  task-metrics.json
MultiStratManagerRepo/Quantower/BridgeGrpcClient/: BridgeGrpcClient.csproj
MultiStratManagerRepo/Quantower/BridgeGrpcClient/src/: BridgeGrpcClient.cs  ITradingClient.cs  TradingClient.cs
MultiStratManagerRepo/Quantower/Infrastructure/: QuantowerEventBridge.cs  QuantowerTradeMapper.cs
MultiStratManagerRepo/Quantower/QuantowerMultiStratAddOn/: AccountSubscription.cs  MinimalBrowserPlugin.cs  MultiStratManagerService.cs  MultiStratPlugin.cs  QuantowerAddon.cs  QuantowerBridgeService.cs  QuantowerMultiStratAddOn.csproj
MultiStratManagerRepo/Quantower/QuantowerMultiStratAddOn/HTML/: layout.html
MultiStratManagerRepo/Quantower/QuantowerMultiStratAddOn/Indicators/: IndicatorCalculator.cs
MultiStratManagerRepo/Quantower/QuantowerMultiStratAddOn/Persistence/: SettingsRepository.cs
MultiStratManagerRepo/Quantower/QuantowerMultiStratAddOn/Services/: SltpRemovalService.cs  TrailingElasticService.cs
MultiStratManagerRepo/Quantower/QuantowerMultiStratAddOn/Utilities/: PnLUtils.cs  SimpleJson.cs
docs/: CODEBASE_ANALYSIS_REPORT.md  DEPLOYMENT_SUCCESS_REPORT.md  FIXES_APPLIED_REPORT.md  FIX_POSITION_ID_REUSE.md  N_TRADES_N_HEDGES_IMPLEMENTATION.md  N_TRADES_N_HEDGES_TESTING_GUIDE.md  PARTIAL_CLOSURE_SUPPORT.md  PRIORITIZED_ACTION_PLAN.md  QUANTOWER_1TO1_HEDGE_FIX.md  QUANTOWER_BASEID_TRACKING_FIX.md  QUANTOWER_CLOSE_LOGIC_FIX.md  QUANTOWER_COMPLETE_ANALYSIS_20250929_FINAL.md  QUANTOWER_CRITICAL_FIXES_20250929.md  QUANTOWER_CRITICAL_FIXES_IMPLEMENTATION.md  QUANTOWER_CRITICAL_FIXES_IMPLEMENTATION_V2.md  QUANTOWER_CRITICAL_FIX_TRAILING_20250929.md  QUANTOWER_CRITICAL_ISSUES_ROOT_CAUSE_ANALYSIS.md  QUANTOWER_CRITICAL_ISSUES_ROOT_CAUSE_ANALYSIS_V2.md  QUANTOWER_FINAL_FIXES_20250929.md  QUANTOWER_FIXES_APPLIED.md  QUANTOWER_FREEZE_FIX_CRITICAL.md  QUANTOWER_MANUAL_TESTING_GUIDE.md  QUANTOWER_MIGRATION_PRD.md  QUANTOWER_MIGRATION_STATUS.md  QUANTOWER_MT5_AUTOSTOP_FIX.md  QUANTOWER_PORT_TASKS.md  QUANTOWER_POSITION_ID_REUSE_FIX.md  QUANTOWER_POSITION_TRACKING_ANALYSIS.md  QUANTOWER_POSITION_TRACKING_HARDENING.md  QUANTOWER_SDK_NOTES.md  QUANTOWER_TASK_CHECKLIST.md  QUANTOWER_TRAILING_LOGIC_FIX.md  QUANTOWER_ULTRAFIX_20250929.md  QUANTOWER_ULTRAFIX_ROUND2_20250929.md  QUANTOWER_ULTRAFIX_ROUND3_20250929.md  QUANTOWER_WHATS_MANUAL_VS_AUTOMATED.md  TODO_ANALYSIS_REPORT.md  WORKFLOW_COORDINATION.md  gRPC_Implementation_Progress.md  gRPC_Migration_Plan.md
memory/agents/: README.md
memory/sessions/: README.md
reports/: todo_triage_20250807_163736.md
scripts/: Copy-NTsources-only.ps1  build-run-headless.ps1  deploy-nt-to-ninjatrader.ps1  deploy-quantower-plugin.ps1  find-multibase-messages.ps1  monitor-plugin-loading.ps1  multi-repo-migration.sh  run-wails-dev-with-logs.ps1  stop-bridge.ps1  todo_triage.sh
scripts/Possible Tools/: analyze-unified-log.ps1  check-mt5-dlls.ps1  fix-nt-addon-loading.ps1
scripts/tools/: copy-to-docs-plugins.ps1
tasks/: tasks.json
